maybe final changes 1

--- a/aboutus.html
+++ b/aboutus.html
@@ -77,17 +77,17 @@
 
 
 
-    <main class="d-flex flex-column gap-5 my-5">
-        <div class="d-flex my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5 justify-content-center">
-            <h1 class="f-oswald m-0 text-black">ABOUT &nbsp;</h1>
-            <h1 class="f-oswald m-0 orange"> US</h1>
+    <main class="d-flex flex-column gap- ">
+        <div class="d-flex my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5 justify-content-center">
+            <h1 class="f-oswald m-0 fw-big text-black"><b>ABOUT</b> &nbsp;</h1>
+            <h1 class="f-oswald m-0 fw-big orange"> US</h1>
         </div>
 
         <section class="our-mission my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex flex-wrap flex-row gap-5 justify-content-center">
-                <img src="./public/divelementorwidgetwrap1@2x.png" alt="">
+                <img src="./public/divelementorwidgetwrap1@2x.png" alt="" style="width: 30rem;">
                 <div class="text-end d-flex">
-                    <div class="m-auto px-3">
+                    <div class="mt-3 px-3">
                         <h6 class="f-inter">OUR MISSION</h6>
                         <p class="f-inter-100">
                             To build the leading gaming
@@ -100,7 +100,7 @@
             </div>
         </section>
 
-        <section class="stats my-0 my-sm-3 my-md-4 my-lg-5 my-xl- bg-orange w-100">
+        <section class="stats my-5 my-sm-3 my-md-4 my-lg-5 my-xl- bg-orange w-100">
             <div class="py-2 d-flex flex-wrap justify-content-center align-items-center">
                 <div class="m-0">
                     <div class="value text-black">
@@ -145,7 +145,7 @@
             </div>
         </section>
 
-        <section class="leadership-team d-flex justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="leadership-team d-flex justify-content-center my-5 my-sm-3 my-md-4 my-lg-3 my-xl-1">
             <div class="w-75 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5 d-flex flex-column gap-5">
                 <p class="fs-2 text-black f-inter">Our Leadership Team</p>
                 <div class="team-members d-flex flex-wrap justify-content-center gap-5 w-100">
@@ -190,7 +190,7 @@
             </div>
         </section>
 
-        <section class="open-positions d-flex justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="open-positions d-flex justify-content-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex flex-column align-items-center">
                 <img src="./public/link@2x.png" alt="">
                 <h1 class="fw-bold mb-4 text-center text-black
