--- a/contactus.html
+++ b/contactus.html
@@ -80,11 +80,11 @@
 
 
 
-    <main class="d-flex flex-column mt-5 gap-5">
+    <main class="d-flex flex-column">
 
 
-        <section class="contact-us w-100 d-flex flex-column align-items-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <h1 class="text-black fw-bold f-oswald text-center">CONTACT US</h1>
+        <section class="contact-us w-100 d-flex flex-column align-items-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+            <h1 class="text-black  fw-big f-oswald text-center">CONTACT US</h1>
             <div class="d-flex flex-wrap  mx-2 justify-content-between">
                 <div class="get-in-touch mx-2 m-auto d-flex flex-column justify-content-center">
                     <h4 class="text-black fw-bold f-oswald mb-3">Get In Touch</h4>
@@ -157,10 +157,10 @@
                 </div>
             </div>
         </section>
-        <section class="find-us my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="find-us my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex my-5 justify-content-center">
-                <h1 class="f-oswald fw-bold m-0 text-black">FIND &nbsp;</h1>
-                <h1 class="f-oswald fw-bold m-0 orange"> US</h1>
+                <h1 class="f-oswald fw-big m-0 text-black">FIND &nbsp;</h1>
+                <h1 class="f-oswald fw-big m-0 orange"> US</h1>
             </div>
             <!-- <img class="w-100" src="./public/map.png" alt=""> -->
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14008.963370079375!2d77.12665470603955!3d28.622542996260016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0331c5debda9%3A0xb086f436fa3bc42d!2sNaraina%20Village%2C%20Naraina%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1702049472906!5m2!1sen!2sin" width="100%" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
