--- a/creators.html
+++ b/creators.html
@@ -5,21 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./footer.css">
-    <link rel="stylesheet" href="./header.css">
-    <link rel="stylesheet" href="./global.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="creators.css">
-
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 
 <body>
-
 
 
     <nav class="navbar navbar-expand-lg justify-content-center ">
@@ -75,115 +73,177 @@
     </nav>
 
 
+    <section class="my-5 d-flex justify-content-center">
+        
+        <div id="carouselExampleIndicators" class="carousel slide">
+            <div class="navs carousel-indicators d-flex justify-content-center ">
+                <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active m-0"
+                    aria-current="true" aria-label="Slide 1">
+                    <h6 class="font-bold text-center m-0  px-3 py-1">Gaming Creators</h6>
+                </button>
+                <button class="m-0" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                    aria-label="Slide 2">
+                    <h6 class="font-bold text-center m-0  px-3 py-1">Lifestyle Creators</h6>
+                </button>
 
-
-
-
-
-    <main class="d-flex flex-column gap-5 ">
-
-
-        <section class="cards d-flex flex-column align-items-center w-100 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <div class="navs d-flex justify-content-center ">
-                <a href="#">
-                    <h6 class="font-bold text-center m-0  p-3">Gaming Creators</h6>
-                </a>
-                <a href="#">
-                    <h6 class="font-bold text-center m-0  p-3">Lifestyle Creators</h6>
-                </a>
             </div>
-            <div class="members mx-3 d-flex gap-4 flex-wrap justify-content-center p-4">
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="members  mx-3 d-flex gap-4 flex-wrap justify-content-center p-4">
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                <div class="carousel-item">
+                    <div class="members mx-3 d-flex gap-4 flex-wrap justify-content-center p-4">
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
+                            <div class="name text-light fw-bold">
+                                <h3 class="m-0">Naincy</h3>
+                            </div>
+                            <div class="socials d-flex gap-2">
+                                <a href="#"><img src="./public/yt.svg" alt=""></a>
+                                <a href="#"><img src="./public/ig-l.svg" alt=""></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
-                <div class="member p-3 border rounded-4 d-flex align-items-end justify-content-between ">
-                    <div class="name text-light fw-bold">
-                        <h3 class="m-0">Naincy</h3>
-                    </div>
-                    <div class="socials d-flex gap-2">
-                        <a href="#"><img src="./public/yt.svg" alt=""></a>
-                        <a href="#"><img src="./public/ig-l.svg" alt=""></a>
-                    </div>
-                </div>
+
             </div>
-        </section>
-
-
-    </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </div>
+    </section>
 
 
 
