--- a/ec.html
+++ b/ec.html
@@ -80,22 +80,23 @@
 
 
 
-    <main class="d-flex flex-column gap-5">
+    <main class="d-flex flex-column ">
         <section
-            class="heading d-flex justify-content-center align-items-center w-100 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <div class="text-white ">
+            class="heading d-flex justify-content-center align-items-end w-100 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+            <div class="text-white">
                 <!-- <img class="position-absolute " src="./public/headphones.png" alt="" width="100%" style="z-index: -1;"> -->
                 <!-- <div> -->
-                <h1 class="align-self-start f-inter">Executor Creatives</h1>
+                <h1 class="align-self-start fw-big f-inter">Executor Creatives</h1>
                 <p class="fw-bold f-inter">Executor Creatives Crafting and executing campaigns for brands looking to tap
                     into
                     <br> India's growing gaming appeal, connecting brands with gaming enthusiasts.
                 </p>
+                <button class="get-it bg-black text-white py-2 px-3" style="transform: translateY(4rem);">Get in Touch </button>
                 <!-- </div> -->
             </div>
         </section>
-        <section class="aspects d-flex flex-column align-items-center gap-5 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <div class="d-flex justify-content-center flex-wrap text-black">
+        <section class="aspects d-flex flex-column align-items-center gap-5 my-5">
+            <div class="d-flex justify-content-center flex-wrap text-black mt-5">
                 <img src="./public/ad.png" alt="">
                 <div class=" p-5">
                     <h4 class="fw-bold f-inter">PERFORMANCE <br> MARKETING</h4>
