--- a/eg.html
+++ b/eg.html
@@ -80,24 +80,24 @@
 
 
 
-    <main class="d-flex flex-column gap-5 mb-5">
+    <main class="d-flex flex-column ">
 
 
         <!-- <section class="eg"> -->
         <section
-            class="heading d-flex justify-content-center align-items-center w-100 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+            class="heading d-flex justify-content-center align-items-center w-100 mt-2 mb-5">
             <div class="text-white ">
                 <!-- <img class="position-absolute " src="./public/headphones.png" alt="" width="100%" style="z-index: -1;"> -->
                 <!-- <div> -->
-                <h1 class="align-self-start f-inter">Executor Gaming </h1>
-                <p class="fw-bold f-inter">
+                <h1 class="align-self-start f-inter fw-big">Executor Gaming </h1>
+                <p class="fw-bold f-inter" style="font-size: 26px;">
                     Executor Gaming is a platform with the sole aim of powering esports <br> experiences.
                 </p>
                 <!-- </div> -->
             </div>
             <!-- </section> -->
         </section>
-        <section class="gp-ip text-black my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="gp-ip text-black my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex flex-wrap-reverse gap-5 align-items-center justify-content-center">
                 <div class="desc text-end">
                     <h1>
