--- a/es.html
+++ b/es.html
@@ -80,14 +80,14 @@
 
 
 
-    <main class="d-flex flex-column gap-5 mt-5">
-        <section class="exo-server my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+    <main class="d-flex flex-column ">
+        <section class="exo-server my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div>
                 <div class="d-flex mb-1 justify-content-center ">
-                    <h1 class="f-oswald fw-bold m-0 text-black">EXO &nbsp;</h1>
-                    <h1 class="f-oswald fw-bold m-0 orange"> SERVER</h1>
+                    <h1 class="f-oswald fw-big m-0 text-black">EXO &nbsp;</h1>
+                    <h1 class="f-oswald fw-big m-0 orange"> SERVER</h1>
                 </div>
-                <p class="text-black text-center f-opensans">Exo Server is an innovative video games operating servers.
+                <p class="text-black text-center fw-bold f-opensans">Exo Server is an innovative video games operating servers.
                     Currently,
                     we operate
                     Exo
@@ -98,7 +98,7 @@
             <div class="d-flex flex-wrap justify-content-center gap-5">
                 <img src="./public/../public/g2-esports.png" alt="">
                 <div>
-                    <h3 class="f-oswald orange fw-bold">Exo Town</h3>
+                    <h3 class="f-oswald orange fw-bold mb-4">Exo Town</h3>
                     <p class="f-opensans">Launched in 2023. <br>
                         Exo Town is a Cracked Java Edition Minecraft Server. Since the launch,
                         our server's player base is intermittently growing since it's first released,
