--- a/news2.html
+++ b/news2.html
@@ -76,7 +76,7 @@
 
 
 
-    <main class="d-flex flex-column gap-5 mt-5">
+    <main class="d-flex flex-column">
         <img src="./public/ganlee.png" alt="" width="100%">
         <section class="welcome d-flex w-100 justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex flex-column gap-4 mx-2">
@@ -97,8 +97,8 @@
                 </div>
             </div>
         </section>
-        <section class="news-era d-flex flex-column align-items-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <div class=" bg-effect position-relative mx-2 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="news-era d-flex flex-column align-items-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+            <div class=" bg-effect position-relative mx-2 gap-5">
                 <h6 class="text-center m-0">NEWS ERA</h6>
                 <!-- <h1 class="f-oswald">GAMING & </h1><h1 class="f-oswald orange">ESPORTS</h1> -->
                 <div class="d-flex flex-wrap g-e justify-content-center  m-auto">
