--- a/team.html
+++ b/team.html
@@ -77,10 +77,10 @@
 
 
 
-    <main class="d-flex flex-column gap-5 mt-5">
-        <div class="d-flex justify-content-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <h1 class="f-oswald m-0 text-black">TEAM &nbsp;</h1>
-            <h1 class="f-oswald m-0 orange"> EXECUTOR</h1>
+    <main class="d-flex flex-column  mt-5">
+        <div class="d-flex justify-content-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-4">
+            <h1 class="f-oswald m-0 fw-big text-black">TEAM &nbsp;</h1>
+            <h1 class="f-oswald m-0 fw-big orange"> EXECUTOR</h1>
         </div>
 
         <section class="games my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
