--- a/team2.html
+++ b/team2.html
@@ -76,12 +76,12 @@
 
 
 
-    <main class="d-flex flex-column gap-5 mt-5">
+    <main class="d-flex flex-column gap- mt-">
         <section class="my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <img src="./public/redimg.png" alt="" width="100%">
             <p class="text-center mx-2">
-                Consisting of Julia "juliano" Kiran, Zainab "zAAz" Turkie, Anastasiya <br>
-                "kr4sy" Khlobystina, Anna "ramziiN" Ramsing and Aleksandra "kyossa" <br>
+                Consisting of Julia <b>"juliano"</b> Kiran, Zainab <b>"zAAz"</b> Turkie, Anastasiya <br>
+                <b>"kr4sy"</b> Khlobystina, Anna <b>"ramziiN"</b> Ramsing and Aleksandra <b>"kyossa"</b> <br>
                 Tychanska, some of the best female European Counter-Strike: Global <br>
                 Offensive players in the world, we are confident that we will have many <br>
                 victories to celebrate in the coming tournaments..
@@ -91,8 +91,8 @@
         <section class="csgo-champs d-flex flex-column align-items-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <img src="./public/CSGOblack.svg" alt="">
             <div class="d-flex my-5 justify-content-center">
-                <h2 class="f-oswald fw-bold m-0 text-black">OUR CHAMPS IN &nbsp;</h2>
-                <h2 class="f-oswald fw-bold m-0 orange"> CSGO</h2>
+                <h2 class="f-oswald fw-bold m-0 text-black fw-big">OUR CHAMPS IN &nbsp;</h2>
+                <h2 class="f-oswald fw-bold m-0 orange fw-big"> CSGO</h2>
             </div>
             <div class="champions d-flex gap-4 w-75 flex-wrap justify-content-center">
                 <!-- <div class="heros-list "> -->
