--- a/aboutus.html
+++ b/aboutus.html
@@ -79,8 +79,8 @@
 
     <main class="d-flex flex-column gap- ">
         <div class="d-flex my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5 justify-content-center">
-            <h1 class="f-oswald m-0 fw-big text-black"><b>ABOUT</b> &nbsp;</h1>
-            <h1 class="f-oswald m-0 fw-big orange"> US</h1>
+            <h1 class="f-oswald m-0 extra-bold fw-big text-black"><b>ABOUT</b> &nbsp;</h1>
+            <h1 class="f-oswald m-0 extra-bold fw-big orange"> US</h1>
         </div>
 
         <section class="our-mission my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
