--- a/news.html
+++ b/news.html
@@ -80,10 +80,10 @@
     <main class="d-flex flex-column ">
         <section class="exo-news d-flex flex-column align-items-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="mx-2">
-                <div class="d-flex my-5 justify-content-center">
-                    <h1 class="f-oswald fw-bold m-0 text-black" style="font-size: 4rem; font-weight: 900;">EXO &nbsp;
+                <div class="d-flex mt-5 mb-3 justify-content-center">
+                    <h1 class="f-oswald fw-big extra-bold m-0 text-black" >EXO &nbsp;
                     </h1>
-                    <h1 class="f-oswald fw-bold m-0 orange" style="font-size: 4rem; font-weight: 900 ;"> NEWS</h1>
+                    <h1 class="f-oswald fw-big extra-bold m-0 orange" > NEWS</h1>
                 </div>
                 <a href="#">
                     <img src="./public/g2-esports.png" alt="" width="500px">
