--- a/team.html
+++ b/team.html
@@ -79,11 +79,11 @@
 
     <main class="d-flex flex-column  mt-5">
         <div class="d-flex justify-content-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-4">
-            <h1 class="f-oswald m-0 fw-big text-black">TEAM &nbsp;</h1>
-            <h1 class="f-oswald m-0 fw-big orange"> EXECUTOR</h1>
+            <h1 class="f-oswald m-0 fw-big extra-bold text-black">TEAM &nbsp;</h1>
+            <h1 class="f-oswald m-0 fw-big extra-bold orange"> EXECUTOR</h1>
         </div>
 
-        <section class="games my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+        <section class="games my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex flex-wrap gap-4 justify-content-center">
                 <a href="#">
                     <div class="position-relative">
