--- a/team2.html
+++ b/team2.html
@@ -76,8 +76,8 @@
 
 
 
-    <main class="d-flex flex-column gap- mt-">
-        <section class="my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+    <main class="d-flex flex-column">
+        <section class="mb-5 mb-sm-3 mb-md-4 mb-lg-5 mb-xl-5">
             <img src="./public/redimg.png" alt="" width="100%">
             <p class="text-center mx-2">
                 Consisting of Julia <b>"juliano"</b> Kiran, Zainab <b>"zAAz"</b> Turkie, Anastasiya <br>
@@ -120,8 +120,8 @@
         </section>
         <section class="achievements d-flex flex-column align-items-center my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex my-5 justify-content-center">
-                <h1 class="f-oswald fw-bold m-0 text-black">OUR &nbsp;</h1>
-                <h1 class="f-oswald fw-bold m-0 orange"> ACHIEVEMENTS</h1>
+                <h1 class="f-oswald fw-big m-0 extra-bold text-black">OUR &nbsp;</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 orange"> ACHIEVEMENTS</h1>
             </div>
             <div class="achievement">
                 <p>Sorry, no achievements for now.</p>
@@ -129,6 +129,10 @@
         </section>
 
         <section class="latest-matches my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
+            <div class="d-flex my-5 justify-content-center">
+                <h1 class="f-oswald fw-big m-0 extra-bold text-black">LATEST &nbsp;</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 orange">MATCHES</h1>
+            </div>
             <div class=" navs d-flex w-75 m-auto px-2">
                 <div class="w-50 d-flex flex-column align-items-center">
                     <a href="#">
@@ -152,8 +156,8 @@
 
         <section class="related-news my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex my-5 justify-content-center">
-                <h1 class="f-oswald fw-bold m-0 text-black">RELATED &nbsp;</h1>
-                <h1 class="f-oswald fw-bold m-0 orange"> NEWS</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 text-black">RELATED &nbsp;</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 orange"> NEWS</h1>
             </div>
             <div class="latest-news my-5 d-flex flex-column align-items-center">
                 <h4 class="f-oswald">LATEST NEWS</h4>
