--- a/contactus.html
+++ b/contactus.html
@@ -85,8 +85,8 @@
 
         <section class="contact-us w-100 d-flex flex-column align-items-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <h1 class="text-black  fw-big f-oswald text-center">CONTACT US</h1>
-            <div class="d-flex flex-wrap  mx-2 justify-content-between">
-                <div class="get-in-touch mx-2 m-auto d-flex flex-column justify-content-center">
+            <div class="d-flex flex-wrap  mx-2 justify-content-between align-items-start">
+                <div class="get-in-touch mx-2  d-flex flex-column justify-content-center">
                     <h4 class="text-black fw-bold f-oswald mb-3">Get In Touch</h4>
                     <div class="details d-flex flex-column gap-2">
                         <div class="detail d-flex gap-3 align-items-center">
