--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Home</title>
 
 
 
@@ -92,8 +92,7 @@
           <h1 class="fw-bold text-black">Home of India's<br>Gaming Talents</h1>
           <div class="buttons d-flex gap-0">
             <button id="scrollButton" class="portfolio fw-bold bg-orange py-2 px-3">Ecosystem</button>
-            <button class="get-in-touch fw-bold text-light bg-black py-2 px-3"><a href="contactus.html"
-                style="color: white;">Get in
+            <button class="get-in-touch fw-bold text-white bg-black py-2 px-3"><a href="contactus.html" class="text-white">Get in
                 Touch</a></button>
           </div>
         </div>
@@ -104,7 +103,7 @@
     </section>
 
     <section id="sponsers"
-      class="sponsers d-flex justify-content-center px-2 my-0 my-sm-3 my-md-4 my-lg-5 my-xl-5  mx-0"
+      class="sponsers d-flex justify-content-center px-2 my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5  mx-0"
       style="overflow-x: hidden;">
 
 
@@ -383,19 +382,21 @@
     </section>
 
     <section
-      class="creators d-flex flex-wrap gap-5 justify-content-center align-items-center my-0  my-sm-3 my-md-4 my-lg-5 my-xl-5 ">
-      <div class="executor-creatives d-flex flex-column gap-3 align-items-center">
+      class="creators d-flex flex-wrap gap-5 justify-content-center align-items-center my-5  my-sm-3 my-md-4 my-lg-5 my-xl-5 ">
+      <div class="executor-creatives d-flex flex-column gap-4 align-items-center">
         <div>
           <div class="d-flex ">
-            <h1 class="f-oswald m-0">EXECUTOR &nbsp;</h1>
-            <h1 class="f-oswald m-0 orange"> CREATIVES</h1>
+            <h1 class="f-oswald m-0 fw-big">EXECUTOR &nbsp;</h1>
+            <h1 class="f-oswald m-0 orange fw-big"> CREATIVES</h1>
           </div>
           <p>Meet our Creators who help us entertaining you</p>
         </div>
-        <div class="partner-invite">
+        <div class="partner-invite d-flex flex-column gap-3">
           <h5 class="f-oswald d-flex justify-content-center">Become a Creators</h5>
-          <button class="bg-orange text-black px-3 py-2 fw-bold d-flex align-items-center gap-1">GET IN TOUCH
-            <img src="./public/doubleArrow.svg" alt=""></button>
+          <button class="bg-orange text-black px-3 py-2 fw-bold d-flex align-items-center gap-1"><a href="contactus.html" class="text-black">GET IN TOUCH
+              <img src="./public/doubleArrow.svg" alt="">
+            </a>
+          </button>
         </div>
       </div>
       <div class="review  d-flex flex-column justify-content-center f-inter">
@@ -403,11 +404,11 @@
           <img src="./public/joystick.png" alt="" style="width: 250px;">
 
         </div>
-        <p class="text-black fw-medium text-center f-inter">&nbsp;&nbsp;&nbsp;&nbsp;My journey began as an esports
+        <p class="text-black fw-medium text-center f-inter">&nbsp;&nbsp;&nbsp;&nbsp;<b>My journey began as an esports
           player, but Thug knew that it wasn't viable career option in India at
           that time. So I started my youtube journey, with a bunch of people I consider as family. We together
           have experienced the highest of highs and lowest of lows, but what matters is that we stuck together
-          and aspire to grow TOGETHER.
+          and aspire to grow TOGETHER.</b>
         </p>
         <!-- <div> -->
         <p class="text-center f-inter">Paniked (Ayush Rai) <br>
@@ -538,4 +539,5 @@
 
 
 </body>
+
 </html>
